--- a/admin/css/index.css
+++ b/admin/css/index.css
@@ -1,8 +1,11 @@
 #mobowpic {width: 500px; height: auto;}
 #pass {display: inline-block; text-align: center;}
+#accept {display: inline-block; text-align: center;}
 #text {text-align: center;}
-#frame {width: 1024px; height: 600px; background: #ffffff;}
+#frame {width: 1024px; height: 800px; background: #ffffff; display: inline-block; text-align: center;}
 #choice {width: 100%; height: auto;}
+#messageframecompany  {width: 1024px; height: 250px; background: #ffffff;}
+#messageframeadmin {width: 1024px; height: 250px; background: #ffffff;}
 *{
 	margin:0;
 	padding:0;
@@ -15,6 +18,7 @@ body{
 	font:14px/1.3 'Segoe UI',Arial, sans-serif;
 	color:#996699;
 	padding:10px;
+	text-align: center;
 }
 
 
