--- a/mobow/admin/css/index.css
+++ b/mobow/admin/css/index.css
@@ -1,3 +1,8 @@
+/*
+mobow-färgkoder [fyll gärna i resterande färgkoder]
+#CCCCCC
+#EA005A
+*/
 #mobowpic {width: 500px; height: auto;}
 #passchange {display: inline-block; text-align: center;}
 #accept {display: inline-block; text-align: center;}
@@ -10,18 +15,6 @@
 	margin:0;
 	padding:0;
 }
-
-
-body{
-	background: #cccccc; 
-	min-height:500px;
-	font:14px/1.3 'Segoe UI',Arial, sans-serif;
-	color:#996699;
-	padding:10px;
-	text-align: center;
-}
-
-
 
 .fancyNav{
 	/* Affects the UL element */
@@ -182,7 +175,30 @@ a:hover{
 
 
 
+/* ##### reset av CSS ##### */
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+margin: 0;
+padding: 0;
+border: 0;
+font-size: 100%;
+font: inherit;
+font-family: Times New Roman;
+vertical-align: baseline;
+}
+/*###############################################*/
 
 /* ##### HTML5 reset för äldre webbläsare ##### */
 article, aside, details, figcaption, figure,
@@ -208,6 +224,26 @@ border-collapse: collapse;
 border-spacing: 0;
 }
 /*###############################################*/
+
+/* generella inställningar för body */
+body{
+	background: #cccccc; 
+	color:#996699;
+	padding:10px;
+	text-align: center;
+}
+
+/* Huvudområde längst upp på sidan */
+#header_wrapper {
+width: 100%;
+height: 110px;
+}
+
+/* Huvudområde längst ned på sidan*/
+#footer_wrapper {
+width: 100%;
+height: 10px;
+}
 
 /* Huvudområdet i mitten av sidan */
 #main-wrapper {
