--- a/mobow/admin/css/index.css
+++ b/mobow/admin/css/index.css
@@ -8,7 +8,6 @@ mobow-färgkoder [fyll gärna i resterande färgkoder]
 #accept {display: inline-block; text-align: center;}
 #passframe {text-align: center;}
 #frame {width: 1024px; height: 800px; background: #ffffff; display: inline-block; text-align: center;}
-#choice {width: 100%; height: auto;}
 #messageframecompany  {width: 1024px; height: 250px; background: #ffffff;}
 #messageframeadmin {width: 1024px; height: 250px; background: #ffffff;}
 *{
@@ -170,7 +169,7 @@ a, a:visited {
 }
 
 a:hover{
-	text-decoration:underline;
+    text-decoration:underline;
 }
 
 
@@ -190,180 +189,193 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-margin: 0;
-padding: 0;
-border: 0;
-font-size: 100%;
-font: inherit;
-font-family: Times New Roman;
-vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    font-family: Times New Roman;
+    vertical-align: baseline;
 }
 /*###############################################*/
 
 /* ##### HTML5 reset för äldre webbläsare ##### */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-display: block;
+    display: block;
 }
 body {
-line-height: 1;
+    line-height: 1;
 }
 ol, ul {
-list-style: none;
+    list-style: none;
 }
 blockquote, q {
-quotes: none;
+    quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-content: '';
-content: none;
+    content: '';
+    content: none;
 }
 table {
-border-collapse: collapse;
-border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 /*###############################################*/
 
-/* generella inställningar för body */
-body{
-	background: #cccccc; 
-	color:#996699;
-	padding:10px;
-	text-align: center;
-}
+
+/* ############### id attribute #<id> ############### */
 
 /* Huvudområde längst upp på sidan */
-#header_wrapper {
-width: 100%;
-height: 110px;
+#header-wrapper {
+    width: 100%;
+    height: 110px;
 }
 
 /* Huvudområde längst ned på sidan*/
-#footer_wrapper {
-width: 100%;
-height: 10px;
+#footer-wrapper {
+    width: 100%;
+    height: 10px;
 }
 
 /* Huvudområdet i mitten av sidan */
 #main-wrapper {
-width: 100%;
-height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 /* Grafiskt grejs för login wrapper */
 #login-wrapper {
-margin: 0px auto;
-width: 400px;
-height: 200px;
-padding: 50px 5px 10px 50px;
-margin-top: 150px;
--moz-box-shadow: 0px 0px 10px #888;
--o-box-shadow: 0px 0px 10px #888;
--webkit-box-shadow: 0px 0px 10px #888;
--moz-border-radius: 10px 10px 10px 10px;
--o-border-radius: 10px 10px 10px 10px;
--webkit-border-radius: 10px 10px 10px 10px;
+    margin: 0px auto;
+    width: 400px;
+    height: 200px;
+    padding: 50px 5px 10px 50px;
+    margin-top: 150px;
+    -moz-box-shadow: 0px 0px 10px #888;
+    -o-box-shadow: 0px 0px 10px #888;
+    -webkit-box-shadow: 0px 0px 10px #888;
+    -moz-border-radius: 10px 10px 10px 10px;
+    -o-border-radius: 10px 10px 10px 10px;
+    -webkit-border-radius: 10px 10px 10px 10px;
+}
+
+/* generella inställningar för huvudmenyn */
+#huvudmeny {
+    width: 100%; 
+    height: auto;
+}
+
+/* ############### name attribute .<name> ############### */
+
+.submit {
+    text-align: center;
+    margin: 20px 0 0 -80px;
+}
+
+/* ############### tag attribute  ############### */
+
+/* generella inställningar för body */
+body{
+    background: #cccccc; 
+    color:#996699;
+    padding:10px;
+    text-align: center;
 }
 
 /* Form höjd, marginal och padding */
 form ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 form ul li {
-	margin: 1em 0 0 0;
-	padding: 0;
+    margin: 1em 0 0 0;
+    padding: 0;
 }
 
 form * {
-	line-height: 1em;
-	text-align:left;
+    line-height: 1em;
+    text-align:left;
 }
 
 /* style för label */
 
 label {
-	clear: left;
-	text-align: right;
-	width: 15%;
-	font-family: Times New Roman;
-	font-weight: bold;
-	font-size: 16px;
-	color: #606060;
+    clear: left;
+    text-align: right;
+    width: 15%;
+    font-family: Times New Roman;
+    font-weight: bold;
+    font-size: 16px;
+    color: #606060;
 }
 
 /* enskilda fält */
 
 input {
-	font-size: 1em;
+    font-size: 1em;
 }
 
 input {
-	border: 2px solid #666;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
-	background: #fff;
+    border: 2px solid #666;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    background: #fff;
 }
 
 input {
-	display: block;
-	margin: 0;
-	padding: .5em;
-	width: 80%;
+    display: block;
+    margin: 0;
+    padding: .5em;
+    width: 80%;
 }
 
 /* ändra färg på border när fältet är markerat */
 
 form *:focus {
-	border: 2px solid #000000;
-	outline: none;
+    border: 2px solid #000000;
+    outline: none;
 }
 
 /* Gör bakgrunden lätt grön när fälten är ifyllda */
 
 input:valid {
-	background: #efe;
+    background: #efe;
 }
 
-/* Submitknappen */
-
-.submit {
-	text-align: center;
-	margin: 20px 0 0 -80px;
-}
+/* Knappar */
 
 input[type="submit"], input[type="button"] {
-	display: inline;
-	margin: 0 5px;
-margin-left:20px;
-	width: 10em;
-	padding: 10px;
-	border: 2px solid #ff0066;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
-	-moz-box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
-	-webkit-box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
-	box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
-	color: #fff;
-	background: #EA005A;
-	font-weight: bold;
-	-webkit-appearance: none;
+    display: inline;
+    margin: 0 5px;
+    margin-left:20px;
+    width: 10em;
+    padding: 10px;
+    border: 2px solid #ff0066;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    -moz-box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
+    -webkit-box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
+    box-shadow: 0 0 .5em rgba(0, 0, 0, .8);
+    color: #fff;
+    background: #EA005A;
+    font-weight: bold;
+    -webkit-appearance: none;
 }
 
 input[type="submit"]:hover, input[type="submit"]:active, input[type="button"]:hover, input[type="button"]:active {
-	cursor: pointer;
-	background: #fff;
-	color: #EA005A;
+    cursor: pointer;
+    background: #fff;
+    color: #EA005A;
 }
 
 input[type="button"]:active, input[type="button"]:active {
-	background: #eee;
-	-moz-box-shadow: 0 0 .5em rgba(0, 0, 0, .8) inset;
-	-webkit-box-shadow: 0 0 .5em rgba(0, 0, 0, .8) inset;
-	box-shadow: 0 0 .5em rgba(0, 0, 0, .8) inset;
+    background: #eee;
+    -moz-box-shadow: 0 0 .5em rgba(0, 0, 0, .8) inset;
+    -webkit-box-shadow: 0 0 .5em rgba(0, 0, 0, .8) inset;
+    box-shadow: 0 0 .5em rgba(0, 0, 0, .8) inset;
 }
