--- a/mobow/admin/css/index.css
+++ b/mobow/admin/css/index.css
@@ -3,7 +3,6 @@ mobow-färgkoder [fyll gärna i resterande färgkoder]
 #CCCCCC
 #EA005A
 */
-#mobowpic {width: 500px; height: auto;}
 #passchange {display: inline-block; text-align: center;}
 #accept {display: inline-block; text-align: center;}
 #passframe {text-align: center;}
@@ -174,56 +173,6 @@ a:hover{
 
 
 
-/* ##### reset av CSS ##### */
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    font-family: Times New Roman;
-    vertical-align: baseline;
-}
-/*###############################################*/
-
-/* ##### HTML5 reset för äldre webbläsare ##### */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-body {
-    line-height: 1;
-}
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-/*###############################################*/
-
 
 /* ############### id attribute #<id> ############### */
 
@@ -231,6 +180,12 @@ table {
 #header-wrapper {
     width: 100%;
     height: 110px;
+}
+
+/* Företagslogga längst upp på alla sidor */
+#mobowpic {
+width: 500px; 
+height: 103px;
 }
 
 /* Huvudområde längst ned på sidan*/
@@ -319,7 +274,7 @@ input {
 }
 
 input {
-    border: 2px solid #666;
+    border: 2px solid #999;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     border-radius: 5px;
@@ -346,7 +301,7 @@ input:valid {
     background: #efe;
 }
 
-/* Knappar */
+/* Knappar [typ button eller submit] */
 
 input[type="submit"], input[type="button"] {
     display: inline;
