--- a/mobow/admin/css/index.css
+++ b/mobow/admin/css/index.css
@@ -172,7 +172,7 @@ a:hover{
 }
 
 
-
+/* Allting nedan är uppstrukturerat och kontrollerat att det fungerar */
 
 /* ############### id attribute #<id> ############### */
 
