--- a/mobow/index.css
+++ b/mobow/index.css
@@ -1,3 +1,12 @@
-#mobowpic {width: 100%; height: auto;}
-#googleMap {width: 100%; height: 500px;}
-#info {width: 100%; height: 150px;}
+#mobowpic {
+  width: 100%; 
+  height: auto;
+}
+#googleMap {
+  width: 100%; 
+  height: 500px;
+}
+#info {
+  width: 100%; 
+  height: 150px;
+}
