--- a/mobow/css/index.css
+++ b/mobow/css/index.css
@@ -1,12 +1,61 @@
+#mobowpic  img{
+  width: 100%; 
+  height: auto;  
+  float: left;
+}
 #mobowpic {
-  width: 500px; 
-  height: 103px;
+ width: 40%;
+ vertical-align:top;
 }
+
+#google_container {
+ width: 100%; 
+ height: 100%;
+ margin-left : auto;
+ margin-right : auto;
+box-sizing:border-box;
+-moz-box-sizing:border-box;
+-webkit-box-sizing:border-box; 
+border:thick solid #ccc;
+
+}
+
 #googleMap {
-  width: 100%; 
-  height: 500px;
+ height : 500px;
+ width : 100%;
 }
-#info {
-  width: 100%; 
-  height: 150px;
+
+#header-wrapper {
+ width: 100%;
+ height: auto;
+ display: inline-block;
+ background: #FFFFFF;
+ margin-bottom: 2%;
+ padding-top: 1%;
+ padding-bottom: 1%;
+ border-top-style: solid;
+ border-top-color: #CCC;
+ border-top-width: thick;
+ 
+ border-bottom-style: solid;
+ border-bottom-color: #CCC;
+ border-bottom-width: thick;
+ 
 }
+
+html, body {
+       height: 100%;
+ }
+ 
+ body {
+       margin: 0px;
+       padding: 0px;
+	   background: #969;
+ }
+ 
+ #wrapper {
+       width: 100%;
+       min-height: 100%;
+       height: auto !important;
+       
+ }
