--- a/mobow/css/index.css
+++ b/mobow/css/index.css
@@ -31,17 +31,15 @@ border:thick solid #ccc;
  width: 100%;
  height: auto;
  display: inline-block;
- background: #FFFFFF;
+ background: #f2f2f2;
  padding-top: 1%;
  padding-bottom: 1%;
  border-top-style: solid;
  border-top-color: #CCC;
- border-top-width: thick;
- 
+ border-top-width: thick; 
  border-bottom-style: solid;
  border-bottom-color: #CCC;
- border-bottom-width: thick;
- 
+ border-bottom-width: thick; 
 }
 
 html, body {
