--- a/mobow/css/index.css
+++ b/mobow/css/index.css
@@ -9,6 +9,16 @@ padding-left: 2%;
  vertical-align:top;
 }
 
+#content {
+width: 500px;
+overflow: hidden;
+}
+
+.gm-style-iw{
+width: 2000px;
+
+}
+
 #google_container {
  width: 100%; 
  height: 100%;
