--- a/mobow/css/index.css
+++ b/mobow/css/index.css
@@ -104,3 +104,17 @@ html, body {
 		.clear {
 			clear: both;
 		}
+#info_window{
+  width: 350px;
+}
+
+.gm-style .gm-style-iw, .gm-style .gm-style-iw a, .gm-style .gm-style-iw span, .gm-style .gm-style-iw label, .gm-style .gm-style-iw div {
+  max-height: 280px;
+  padding: 0px 10px 5px 5px;
+  overflow-y: scroll;
+  overflow-x: visible;
+}
+
+.gm-style-iw div {
+  overflow:visible !important;
+}
