fixat custom made infowindows

--- a/mobow/css/index.css
+++ b/mobow/css/index.css
@@ -1,6 +1,6 @@
 #mobowpic  img{
-  width: 100%; 
-  height: auto;  
+  width: 100%;
+  height: auto;
   float: left;
 }
 #mobowpic {
@@ -60,83 +60,108 @@ body {
   min-height: 100%;
   height: auto !important;     
 }
- 
-
-.location {
-    width: 100%;
-    min-height: 400px;
-    height: 100%;
-}
-
-.map-popup {
-    position: relative;			
-}
-.map-popup img {
-    width: 100%;
-    height: auto;
-		
-}
-.map-popup h1{
-    margin: 0px;
-}
-
-.map-popup > div {
-    display: inline-block;			
-}
-
-.map-popup div.logo {
-    width: 25%;
-    float: left;
-}
-
-.map-popup div.about {
-    float: right;
-    width: 75%;
-}
 
 .clear {
     clear: both;
 }
 
-
-.gm-style .gm-style-iw, .gm-style .gm-style-iw a, .gm-style .gm-style-iw span, .gm-style .gm-style-iw label, .gm-style .gm-style-iw div {
-    max-height: 280px;
-    padding: 0px 10px 5px 5px;
-    overflow-y: scroll;
-    overflow-x: visible;
+.aDcrocleft{
+  position: absolute; 
+  left: 6px; 
+  transform: skewX(22.5deg) translateZ(0px);
+  -webkit-transform: skewX(22.5deg) translateZ(0px);
+  -moz-transform: skewX(22.5deg) translateZ(0px);
+  -ms-transform: skewX(22.5deg) translateZ(0px);
+  transform-origin: 0px 0px 0px; 
+  -webkit-transform-origin: 0px 0px 0px; 
+  -moz-transform-origin: 0px 0px 0px; 
+  -ms-transform-origin: 0px 0px 0px;   
+  height: 24px; 
+  width: 10px; 
+  box-shadow: rgba(0, 0, 0, 0.7) 0px 1px 5px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.7) 0px 1px 5px;
+  background-color: rgb(255, 255, 255);
 }
 
-.gm-style-iw div {
-  overflow:visible !important;
+.aDcrocright{
+  position: absolute; 
+  left: 0px;
+  transform: skewX(-22.5deg) translateZ(0px);
+  -webkit-transform: skewX(-22.5deg) translateZ(0px);
+  -moz-transform: skewX(-22.5deg) translateZ(0px);
+  -ms-transform: skewX(-22.5deg) translateZ(0px);
+  transform-origin: 10px 0px 0px; 
+  -webkit-transform-origin: 10px 0px 0px; 
+  -moz-transform-origin: 10px 0px 0px; 
+  -ms-transform-origin: 10px 0px 0px; 
+  height: 24px; 
+  width: 10px; 
+  box-shadow: rgba(0, 0, 0, 0.7) 0px 1px 5px; 
+  -webkit-box-shadow: rgba(0, 0, 0, 0.7) 0px 1px 5px;
+  background-color: rgb(255, 255, 255);
 }
 
+.arrowDiv{position: absolute; left: 117px; top: 339px;}
+
+/*.arrowDivleft{position: absolute; overflow: hidden; left: -6px; top: -1px; width: 16px; height: 30px;}*/
+
+.arrowDivleft{position: absolute; overflow: hidden; left: -12px; top: 0px; width: 16px; height: 30px;}
+/*.arrowDivright{position: absolute; overflow: hidden; left: 10px; top: -1px; width: 16px; height: 30px;}*/
+
+.arrowDivright{position: absolute; overflow: hidden; left: 4px; top: 0px; width: 16px; height: 30px;}
+
+.closeDiv{
+  width:16px;
+  height:16px;
+  overflow:hidden;
+  position: absolute;
+/*  transform: translateZ(0px);*/
+  right: 15px;
+  top: 15px;
+  cursor: pointer;
+}
+
+.containerDiv{
+  position: absolute; 
+  left: 0px; 
+  top: 0px; 
+  border-radius: 4px; 
+  width: 251px; 
+  height: 340px; 
+  background-color: rgb(255, 255, 255); 
+  box-shadow:8px 8px 16px #222;
+  -webkit-box-shadow:8px 8px 16px #222;
+}
+
+.contentDiv{
+  overflow: auto; 
+  width: 200px; 
+  height: 324px;
+/*  text-align:center;*/
+/*  padding:5px 20px 10px;*/
+}
+
+.inDiv{position: absolute; left: 0px; top: 0px;}
 
 .infowindow{
-    background: #EA005A;
-    border-radius:4px;
-    box-shadow:8px 8px 16px #222;
-    color: #232323;
-    min-width:150px;
-    max-width:200px;
-    max-height:300px;
-    text-align:center;
-    padding:5px 20px 10px;
-    overflow:hidden;
-    position:absolute;
-    text-transform:uppercase;
+  width:253px;
+  height:342px;
+  position:absolute;
+  left:445px;
+  top:47px;
 }
 
-.infowindow{
-    float:right;
-    cursor:pointer;
-    margin-right:-5px;
-    margin-left:5px;
+.innerDiv{top: 9px; position: absolute; left: 15px; width: 223px; height: 324px;}
+
+.iw_close{
+  border: 0px;
+  padding: 0px;
+  margin: 0px;
+  width: 16px;
+  height: 16px;
 }
 
-.infowindow h5{
-    font-weight:bold;
-}
-
-.infowindow p{
-    color: #000;
-}
+/*.div1{width: 0px; height: 0px; border-right-width: 10px; border-right-style: solid; border-right-color: transparent; border-left-width: 10px; border-left-style: solid; border-left-color: transparent; border-top-width: 24px; border-top-style: solid; border-top-color: rgba(0, 0, 0, 0.0980392); position: absolute; left: 117px; top: 342px;}*/
+/*.div2{position: absolute; left: 0px; top: 0px; border-radius: 2px; -webkit-box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px; box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px; width: 253px; height: 342px; background-color: rgba(0, 0, 0, 0.2);}*/
+/*.arrowDiv{border-top-width: 24px; position: absolute; left: 117px; top: 339px;}
+*/
