--- a/mobow/css/index.css
+++ b/mobow/css/index.css
@@ -16,19 +16,22 @@
 
 #google_container {
   width: 100%; 
-  height: 100%;
   margin-left : auto;
   margin-right : auto;
   box-sizing:border-box;
   -moz-box-sizing:border-box;
   -webkit-box-sizing:border-box; 
-  border:thick solid #ccc;
+  border-top:thick solid #ccc;
+  border-bottom:thick solid #ccc;
 }
 
 #googleMap {
-  min-height : 500px;
+  min-height: 500px;
   height: 100%;
-  width : 100%;
+  width : 1000px;
+  max-width: 100%;
+  min-width: 768px;
+  margin: 0 auto;
 }
 
 #header-wrapper {
@@ -103,7 +106,7 @@ body {
   background-color: rgb(255, 255, 255);
 }
 
-.arrowDiv{position: absolute; left: 117px; top: 339px;}
+.arrowDiv{position: absolute; left: 117px; top: 339px; opacity: 0.8;}
 
 /*.arrowDivleft{position: absolute; overflow: hidden; left: -6px; top: -1px; width: 16px; height: 30px;}*/
 
@@ -118,8 +121,8 @@ body {
   overflow:hidden;
   position: absolute;
 /*  transform: translateZ(0px);*/
-  right: 15px;
-  top: 15px;
+  right: 8px;
+  top: 5px;
   cursor: pointer;
 }
 
@@ -133,13 +136,13 @@ body {
   background-color: rgb(255, 255, 255); 
   box-shadow:8px 8px 16px #222;
   -webkit-box-shadow:8px 8px 16px #222;
+  opacity: 0.6;
 }
 
 .contentDiv{
   overflow-y: auto;
   overflow-x: hidden;
-  width: 200px; 
-  height: 324px;
+  height: 320px;
   font-family:Roboto, Arial, sans-serif;
   font-size: 14px;
   font-weight: normal;
@@ -157,7 +160,7 @@ body {
   top:47px;
 }
 
-.innerDiv{top: 9px; position: absolute; left: 15px; width: 223px; height: 324px;}
+.innerDiv{top: 9px; position: absolute; left: 15px; width: 230px; height: 324px; padding-top:10px;}
 
 .iw_close{
   border: 0px;
