--- a/mobow/css/index.css
+++ b/mobow/css/index.css
@@ -133,7 +133,7 @@ body {
   border-radius: 4px; 
   width: 251px; 
   height: 340px; 
-  background-color: rgb(255, 255, 255); 
+  background-color: rgb(255, 255, 255);
   box-shadow:8px 8px 16px #222;
   -webkit-box-shadow:8px 8px 16px #222;
   opacity: 0.6;
@@ -176,6 +176,14 @@ body {
     font-weight: bold;
     font-size: 14px;
     direction: ltr;
+}
+
+.meterDiv{
+    position: absolute;
+    background-color: rgb(255, 255, 255);
+    bottom:5px;
+    left: 5px;
+    font-weight: bold;
 }
 
 .imge{
