--- a/mobow/css/index.css
+++ b/mobow/css/index.css
@@ -24,14 +24,12 @@
   border-top:thick solid #ccc;
   border-bottom:thick solid #ccc;
   height: 100%;
-  max-height: 600px;
 }
 
 #googleMap {
   min-height: 500px;
   height: 100%;
   width: 1000px;
-  max-height: 600px;
   max-width: 100%;
   min-width: 768px;
   margin: 0 auto;
@@ -40,6 +38,7 @@
 #header-wrapper {
   width: 100%;
   height: auto;
+  min-height: 135px;
   display: inline-block;
   background: #f2f2f2;
   padding-top: 1%;
