--- a/mobow/admin/css/index.css
+++ b/mobow/admin/css/index.css
@@ -122,123 +122,6 @@ text-align: left;
   margin:0;
   padding:0;
 }
-.fancyNav{
-  /* Affects the UL element */
-  overflow: hidden;
-  display: inline-block;
-}
-.fancyNav li{
-  background-color: #f0f0f0;
-  background-image: -webkit-gradient(linear,left top, left bottom,from(#fefefe), color-stop(0.5,#f0f0f0), color-stop(0.51, #e6e6e6));
-  background-image: -moz-linear-gradient(#fefefe 0%, #f0f0f0 50%, #e6e6e6 51%);
-  background-image: -o-linear-gradient(#fefefe 0%, #f0f0f0 50%, #e6e6e6 51%);
-  background-image: -ms-linear-gradient(#fefefe 0%, #f0f0f0 50%, #e6e6e6 51%);
-  background-image: linear-gradient(#fefefe 0%, #f0f0f0 50%, #e6e6e6 51%);
-  border-right: 1px solid rgba(9, 9, 9, 0.125);
-  box-shadow: 1px -1px 0 rgba(255, 255, 255, 0.6) inset;
-  -moz-box-shadow: 1px -1px 0 rgba(255, 255, 255, 0.6) inset;
-  -webkit-box-shadow: 1px -1px 0 rgba(255, 255, 255, 0.6) inset;
-  position:relative;
-  float: left;
-  list-style: none;
-}
-.fancyNav li:after{	
-  content:'.';
-  text-indent:-9999px;
-  overflow:hidden;
-  position:absolute;
-  width:100%;
-  height:100%;
-  top:0;
-  left:0;
-  z-index:1;
-  opacity:0;	
-  /* Gradients! */	
-  background-image:-webkit-gradient(linear, left top, right top, from(rgba(168,168,168,0.5)),color-stop(0.5,rgba(168,168,168,0)), to(rgba(168,168,168,0.5)));
-  background-image:-moz-linear-gradient(left, rgba(168,168,168,0.5), rgba(168,168,168,0) 50%, rgba(168,168,168,0.5));
-  background-image:-o-linear-gradient(left, rgba(168,168,168,0.5), rgba(168,168,168,0) 50%, rgba(168,168,168,0.5));
-  background-image:-ms-linear-gradient(left, rgba(168,168,168,0.5), rgba(168,168,168,0) 50%, rgba(168,168,168,0.5));
-  background-image:linear-gradient(left, rgba(168,168,168,0.5), rgba(168,168,168,0) 50%, rgba(168,168,168,0.5));
-  box-shadow:-1px 0 0 #a3a3a3,-2px 0 0 #fff,1px 0 0 #a3a3a3,2px 0 0 #fff;
-  -moz-box-shadow:-1px 0 0 #a3a3a3,-2px 0 0 #fff,1px 0 0 #a3a3a3,2px 0 0 #fff;
-  -webkit-box-shadow:-1px 0 0 #a3a3a3,-2px 0 0 #fff,1px 0 0 #a3a3a3,2px 0 0 #fff;
-  -moz-transition:0.25s all;
-  -webkit-transition:0.25s all;
-  -o-transition:0.25s all;
-  transition:0.25s all;
-}
-
-.fancyNav li:first-child{
-  border-radius: 5px 0 0 5px;
-}
-
-.fancyNav li:first-child:after,
-.fancyNav li.selected:first-child:after{
-  box-shadow:1px 0 0 #a3a3a3,2px 0 0 #fff;
-  -moz-box-shadow:1px 0 0 #a3a3a3,2px 0 0 #fff;
-  -webkit-box-shadow:1px 0 0 #a3a3a3,2px 0 0 #fff;
-  border-radius:5px 0 0 5px;
-}
-
-.fancyNav li:last-child{
-  border-radius: 0 5px 5px 0;
-}
-
-.fancyNav li:last-child:after,
-.fancyNav li.selected:last-child:after{
-  box-shadow:-1px 0 0 #a3a3a3,-2px 0 0 #fff;
-  -moz-box-shadow:-1px 0 0 #a3a3a3,-2px 0 0 #fff;
-  -webkit-box-shadow:-1px 0 0 #a3a3a3,-2px 0 0 #fff;
-  border-radius:0 5px 5px 0;
-}
-
-.fancyNav li:hover:after,
-.fancyNav li.selected:after,
-.fancyNav li:target:after{
-  opacity:1;
-}
-
-.fancyNav:hover li.selected:after,
-.fancyNav:hover li:target:after{
-  opacity:0;
-}
-
-.fancyNav li.selected:hover:after,
-.fancyNav li:target:hover:after{
-  opacity:1;
-}
-
-.fancyNav li a{
-  color: #5d5d5d;
-  display: inline-block;
-  font: 18px Arial,sans-serif;
-  padding: 10px 33px 10px;
-  position: relative;
-  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.6);
-  z-index:2;
-  text-decoration:none;
-  white-space:nowrap;
-}
-
-.fancyNav a.hemikon{
-	background:url('../../image/home.png') no-repeat center center;
-	display: block;
-	overflow: hidden;
-	padding-left: 10px;
-	padding-right: 10px;
-	text-indent: -9999px;
-	width: 16px;
-}
-
-.fancyNav a.logikon{
-	background:url('../../image/logout.png') no-repeat center center;
-	display: block;
-	overflow: hidden;
-	padding-left: 10px;
-	padding-right: 10px;
-	text-indent: -9999px;
-	width: 16px;
-}
 
 /* ################################################################## */
 /* ################################################################## */
@@ -403,9 +286,148 @@ label {
   color: #606060;
 }
 
+/*#####################################################*/
+/*#####################################################*/
+/*############### huvudmeny ###########################*/
+/*#####################################################*/
+/*#####################################################*/
+
 /* generella inställningar för nav */
 nav{
   margin: 50px auto 0;
   text-align: center;
   width: 1024px;
+}
+
+nav ul{
+  list-style:none;
+  position:relative;
+  display:inline-block;
+}
+nav ul:after{
+  content:'';
+  clear:both;
+  display:block;
+}
+nav ul li{
+  float:left;
+  position:relative;
+  background-color: #f0f0f0;
+  background-image: -webkit-gradient(linear,left top, left bottom,from(#fefefe), color-stop(0.5,#f0f0f0), color-stop(0.51, #e6e6e6));
+  background-image: -moz-linear-gradient(#fefefe 0%, #f0f0f0 50%, #e6e6e6 51%);
+  background-image: -o-linear-gradient(#fefefe 0%, #f0f0f0 50%, #e6e6e6 51%);
+  background-image: -ms-linear-gradient(#fefefe 0%, #f0f0f0 50%, #e6e6e6 51%);
+  background-image: linear-gradient(#fefefe 0%, #f0f0f0 50%, #e6e6e6 51%);
+  border-right: 1px solid rgba(9, 9, 9, 0.125);
+  box-shadow: 1px -1px 0 rgba(255, 255, 255, 0.6) inset;
+  -moz-box-shadow: 1px -1px 0 rgba(255, 255, 255, 0.6) inset;
+  -webkit-box-shadow: 1px -1px 0 rgba(255, 255, 255, 0.6) inset;
+}
+nav > ul > li > ul > li:last-child:after{
+  border-radius:0 0 5px 5px;
+}
+nav ul li:after{
+  content:'.';
+  text-indent:-9999px;
+  overflow:hidden;
+  position:absolute;
+  width:100%;
+  height:100%;
+  top:0;
+  left:0;
+  z-index:1;
+  opacity:0;	
+  /* Gradients! */	
+  background-image:-webkit-gradient(linear, left top, right top, from(rgba(168,168,168,0.5)),color-stop(0.5,rgba(168,168,168,0)), to(rgba(168,168,168,0.5)));
+  background-image:-moz-linear-gradient(left, rgba(168,168,168,0.5), rgba(168,168,168,0) 50%, rgba(168,168,168,0.5));
+  background-image:-o-linear-gradient(left, rgba(168,168,168,0.5), rgba(168,168,168,0) 50%, rgba(168,168,168,0.5));
+  background-image:-ms-linear-gradient(left, rgba(168,168,168,0.5), rgba(168,168,168,0) 50%, rgba(168,168,168,0.5));
+  background-image:linear-gradient(left, rgba(168,168,168,0.5), rgba(168,168,168,0) 50%, rgba(168,168,168,0.5));
+  box-shadow:-1px 0 0 #a3a3a3,-2px 0 0 #fff,1px 0 0 #a3a3a3,2px 0 0 #fff;
+  -moz-box-shadow:-1px 0 0 #a3a3a3,-2px 0 0 #fff,1px 0 0 #a3a3a3,2px 0 0 #fff;
+  -webkit-box-shadow:-1px 0 0 #a3a3a3,-2px 0 0 #fff,1px 0 0 #a3a3a3,2px 0 0 #fff;
+  -moz-transition:0.25s all;
+  -webkit-transition:0.25s all;
+  -o-transition:0.25s all;
+  transition:0.25s all;
+}
+nav > ul > li:first-child{
+  border-radius: 5px 0 0 5px;
+}
+nav > ul > li:first-child:after,
+nav > ul > li.selected:first-child:after{
+  box-shadow:1px 0 0 #a3a3a3,2px 0 0 #fff;
+  -moz-box-shadow:1px 0 0 #a3a3a3,2px 0 0 #fff;
+  -webkit-box-shadow:1px 0 0 #a3a3a3,2px 0 0 #fff;
+  border-radius:5px 0 0 5px;
+}
+nav ul li:hover > ul{
+  display:block;
+}
+nav ul li:hover:after,
+nav ul li.selected:after,
+nav ul li:target:after{
+    opacity:1;
+}
+nav ul li.selected:hover:after,
+nav ul li:target:hover:after{
+  opacity:1;
+}
+nav ul:hover li.selected:after,
+nav ul:hover li:target:after{
+  opacity:0;
+}
+nav > ul > li:last-child{
+  border-radius: 0 5px 5px 0;
+}
+nav > ul > li:last-child:after,
+nav > ul > li.selected:last-child:after{
+  box-shadow:-1px 0 0 #a3a3a3,-2px 0 0 #fff;
+  -moz-box-shadow:-1px 0 0 #a3a3a3,-2px 0 0 #fff;
+  -webkit-box-shadow:-1px 0 0 #a3a3a3,-2px 0 0 #fff;
+  border-radius:0 5px 5px 0;
+}
+nav ul li a{
+  display:block;
+  text-decoration:none;
+  color: #5d5d5d;
+  font: 18px Arial,sans-serif;
+  padding: 10px 37px 10px;
+  position: relative;
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.6);
+  z-index:2;
+  text-decoration:none;
+  white-space:nowrap;
+}
+nav ul ul{
+  position:absolute;
+  top:100%;
+  display:none;
+}
+nav ul ul li{
+  float:none;
+  position:relative;
+}
+nav ul ul li:last-child{
+  border-radius:0 0 5px 5px !important;  
+}
+
+nav ul a.hemikon{
+  background:url('../../image/home.png') no-repeat center center;
+  display: block;
+  overflow: hidden;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-indent: -9999px;
+  width: 16px;
+}
+
+nav ul a.logikon{
+  background:url('../../image/logout.png') no-repeat center center;
+  display: block;
+  overflow: hidden;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-indent: -9999px;
+  width: 16px;
 }
