--- a/mobow/admin/css/index.css
+++ b/mobow/admin/css/index.css
@@ -25,6 +25,19 @@ mobow-färgkoder [fyll gärna i resterande färgkoder]
   text-align: center;
   padding:25px 0px;
 }
+#frame_edit { 
+  margin: 0px auto;
+  width: 400px;
+  height: 300px;
+  padding: 25px;
+  margin-top: 50px;
+  -moz-box-shadow: 0px 0px 10px #888;
+  -o-box-shadow: 0px 0px 10px #888;
+  -webkit-box-shadow: 0px 0px 10px #888;
+  -moz-border-radius: 10px 10px 10px 10px;
+  -o-border-radius: 10px 10px 10px 10px;
+  -webkit-border-radius: 10px 10px 10px 10px;
+}
 #invoiceframe { 
   width: 1024px; 
   min-height: 800px;
@@ -39,10 +52,6 @@ mobow-färgkoder [fyll gärna i resterande färgkoder]
   background: #CCC; 
   display: inline-block; 
   text-align: center;
-}
-
-#frame *{
-margin: 0;
 }
 
 #postContracts *{
@@ -148,7 +157,7 @@ text-align: left;
   margin: 0px auto;
   width: 400px;
   height: 200px;
-  padding: 50px 5px 10px 50px;
+  padding: 50px;
   margin-top: 150px;
   -moz-box-shadow: 0px 0px 10px #888;
   -o-box-shadow: 0px 0px 10px #888;
@@ -186,7 +195,7 @@ text-align: left;
 /* generella inställningar för submit */
 .submit {
   text-align: center;
-  margin: 20px 0 0 -80px;
+  margin-top: 20px;
 }
 
 /* ############### tag attribute  ############### */
