--- a/mobow/admin/css/index.css
+++ b/mobow/admin/css/index.css
@@ -29,29 +29,82 @@ mobow-färgkoder [fyll gärna i resterande färgkoder]
   width: 1024px; 
   min-height: 800px;
   height: 100%;
-  background: #fff; 
+  background: #ccc; 
   display: inline-block; 
 }
 #invoiceframe option{
-background: #EA005A;
+background: #efefef; 
 }
+
+
+#uploadbutton{
+	background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
+	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
+	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
+	box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
+	border-radius: 10px;  	
+	padding: 10px 20px;
+	color: #EA005A; 
+	font: 18px Arial,sans-serif;
+
+}
+#invoicedropdown{
+	background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
+	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
+	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
+	box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
+	border-radius: 10px;  
+	position:relative;
+	left:2px;top:2px;	
+	padding: 10px 20px;
+	color: #EA005A; 
+	font: 18px Arial,sans-serif;
+	border: hidden;
+}
+#choicebutton{
+	background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
+	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
+	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
+	box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
+	border-radius: 10px;  
+	padding: 10px 20px;
+	color: #EA005A;
+	position:relative;
+	left:40px;top:2px;	
+	font: 18px Arial,sans-serif;
+	border: hidden;
+}
+
 #listframe { 
-  width: 60%; 
+  width: 63%; 
   min-height: 800px;
   height: 100%;
+  position:relative;
+  left:540px;bottom:20px;
   background: #CCC; 
   display: inline-block; 
   text-align: center;
 }
+#preview{
+	box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
+    min-height: 800px;
+	min-width: 500px;
+	width: 100%;
+    height: 100%;	
+	position:relative;
+	right:500px;bottom:850px;
+}
 #invoicelistframe { 
-  width: 98%; 
-  min-height: 30px;
-  height: 100%;
-  background: #EA005A;
-  border: medium double rgb(0,0,0);
-  display: inline-block;
-  font: 18px Arial,sans-serif;
-  text-align: center;
+background: #efefef; 
+	background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
+	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
+	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
+	box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
+	padding: 10px 20px;
+	position:relative;
+	left:0px;top:10px;
+	color: #EA005A; 
+	font: 18px Arial,sans-serif;
 }
 #frame *{
 margin: 0;
@@ -128,6 +181,8 @@ text-align: left;
   width: 1024px; 
   height: 250px; 
   background: #fff;
+  text-align: left;
+  font: 18px Arial,sans-serif;
 }
 
 *{
