--- a/mobow/admin/css/index.css
+++ b/mobow/admin/css/index.css
@@ -99,10 +99,11 @@ background: #efefef;
 	background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
 	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
 	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
-	box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
-	padding: 10px 20px;
+	box-shadow: 0px 0px 9px rgba(0,0,0,1);
+	padding: 10px 7px;
+	width: 95%;
 	position:relative;
-	left:0px;top:10px;
+	left:5px;top:10px;
 	color: #EA005A; 
 	font: 18px Arial,sans-serif;
 }
